--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,9 +6,9 @@ name: Image_Updater
 on:
   schedule: 
     # When the season picks up, run every hour at 55 past
-    - cron: '55 * * * *'
+    #- cron: '55 * * * *'
     # When the season slows, run every hour 3 hours
-    #- cron: '55 */3 * * *'
+    - cron: '55 */3 * * *'
     # When there's nothing, run every 6 hours
     #- cron: '55 */6 * * *'
     # Early or later on in the season, run every 12 hours
